Attempt to fix overflow issues

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 } */
 
 body {
-  max-width: 100%;
+  max-width: 100vh;
   /* height: 100%; */
   overflow-x: hidden !important;
   margin: 0;
